--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -309,9 +309,7 @@ combined_pip_by_group_multi_E <- readRDS(paste0(folder_results_multi_E,trait,"/"
 print(plot_overlap_barplot_multi_vs_multi_E_vs_single(combined_pip_by_group_multi = combined_pip_by_group_multi, combined_pip_by_group_single = combined_pip_by_group_single, combined_pip_by_group_multi_E = combined_pip_by_group_multi_E, PIP_cutoff = PIP_cutoff,tissue = top_tissue,trait = trait,return_unique_genes = T)$plot)
 ```
 
-```{r, out.width="80%", fig.align="center", echo=FALSE}
-knitr::include_graphics("/project/xinhe/shengqian/cTWAS_paper_figures/data/lz_png/LDL-ukb-d-30780_irnt/multi/PKN3.png")
-```
+![](../data/figures/LDL-ukb-d-30780_irnt/multi/LDLR.png){width=80%}
 
 ### Figure 4b: Validation with Silver Standand Genes
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
