--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -21,6 +21,12 @@ source("/project/xinhe/shengqian/cTWAS_paper_figures/plot_function.R")
 source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
 ```
 
+## Figure 1: Workflow of M-cTWAS
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/blob/master/data/figures/multi_ctwas_workflow.pdf" width="150%">
+</figure>
+
 ## Figure 2: cTWAS simulations (Correlated Brain Tissues)
 ```{r echo=FALSE}
 pve_gene <- c(0.02, 0.02, 0, 0, 0,
