--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -612,12 +612,12 @@ print(p2)
 
 ### Figure 5b: Gene set enrichment analysis
 <figure class="half">
-    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_pathway_enrichment" width="150%">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_pathway_enrichment.png" width="150%">
 </figure>
 
 ### Figure 5c: Network analysis of candidate genes suggests novel pathways
 <figure class="half">
-    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_gene_clusters" width="150%">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_gene_clusters.png" width="150%">
 </figure>
 
 ## Figure 6: Brain epiQTLs explain a large fraction of missing heritability by eQTLs
