--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -17,6 +17,7 @@ library(grid)
 library(dplyr)
 library(pheatmap)
 library(EnsDb.Hsapiens.v86)
+library(ComplexHeatmap)
 source("/project/xinhe/shengqian/cTWAS_paper_figures/plot_function.R")
 source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
 ```
@@ -583,28 +584,36 @@ PIP_cutoff <- 0.9
 combined_pip_by_group_single <- readRDS(paste0(folder_results_single, trait, "/", trait, "_", top_tissue, ".combined_pip_rmmapping_bygroup_final.RDS"))
 combined_pip_by_group_multi <- readRDS(paste0(folder_results_multi,trait,"/",trait,".3qtls.combined_pip_rmmapping_bytype_final.RDS"))
 combined_pip_by_context_multi <- readRDS(paste0(folder_results_multi,trait,"/",trait,".3qtls.combined_pip_rmmapping_bycontext_final.RDS"))
-combined_pip_by_group_multi_sig <- combined_pip_by_group_multi[combined_pip_by_group_multi$combined_pip > PIP_cutoff,]
-combined_pip_by_group_single_sig <- combined_pip_by_group_single[combined_pip_by_group_single$combined_pip > PIP_cutoff,]
-combined_pip_by_context_multi_sig <- combined_pip_by_context_multi[combined_pip_by_context_multi$combined_pip > PIP_cutoff,]
+#combined_pip_by_group_multi_sig <- combined_pip_by_group_multi[combined_pip_by_group_multi$combined_pip > PIP_cutoff,]
+#combined_pip_by_group_single_sig <- combined_pip_by_group_single[combined_pip_by_group_single$combined_pip > PIP_cutoff,]
+#combined_pip_by_context_multi_sig <- combined_pip_by_context_multi[combined_pip_by_context_multi$combined_pip > PIP_cutoff,]
   
+combined_pip_by_group_multi_sig <- combined_pip_by_group_multi[1:30,]
+combined_pip_by_context_multi_sig <- combined_pip_by_context_multi[1:30,]
 #combined_pip_by_group_multi_unique <- combined_pip_by_group_multi_sig[!combined_pip_by_group_multi_sig$gene_name %in% combined_pip_by_group_single_sig$gene_name, ]
 #combined_pip_by_context_multi_unique <- combined_pip_by_context_multi_sig[!combined_pip_by_context_multi_sig$gene_name %in% combined_pip_by_group_single_sig$gene_name, ]
 
-p1 <- plot_heatmap(heatmap_data = combined_pip_by_group_multi_sig, main = paste0("New genes identified by multigroup analysis, PIP>",PIP_cutoff),showPIP = T)
+p1 <- plot_heatmap(heatmap_data = combined_pip_by_group_multi_sig, main = paste0("By modality"),showPIP = T,show_heatmap_legend=TRUE)
   
-p2 <- plot_heatmap(heatmap_data = combined_pip_by_context_multi_sig, main = paste0("New genes identified by multicontext analysis, PIP>",PIP_cutoff),showPIP = T)
+p2 <- plot_heatmap(heatmap_data = combined_pip_by_context_multi_sig, main = paste0("By context"),showPIP = T,show_heatmap_legend=FALSE)
 ```
 
 ### Figure 5a: cTWAS helps identify causal modality and context
-```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=15, fig.width=12}
+```{r, eval=F, echo=FALSE, message=FALSE, warning=FALSE,fig.height=15, fig.width=12}
 grid.newpage()
 print(p1)
 ```
 
-```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=15, fig.width=12}
+```{r, eval=F, echo=FALSE, message=FALSE, warning=FALSE,fig.height=15, fig.width=12}
 grid.newpage()
 print(p2)
 ```
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=15, fig.width=20}
+draw(p1 + p2,heatmap_legend_side = "right",
+  annotation_legend_side = "right")
+```
+
 
 ### Figure 5b: Gene set enrichment analysis
 <figure class="half">
