--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -18,6 +18,10 @@ library(dplyr)
 library(pheatmap)
 library(EnsDb.Hsapiens.v86)
 library(ComplexHeatmap)
+library(GenomicRanges)
+library(mapgen)
+library(RSQLite)
+library(RColorBrewer)
 source("/project/xinhe/shengqian/cTWAS_paper_figures/plot_function.R")
 source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
 ```
@@ -37,6 +41,31 @@ pve_gene <- c(0.02, 0.02, 0, 0, 0,
 group_size <- c(8798,8772,8478,8596,8542, 
                 22802,19188,17467,17104,22142, 
                 3561,2935,2578,2659,3142)
+pve_snp <- 0.3
+sigma_theta <- 0.02
+sigma_beta <- 0.02
+gene_prior <- pve_gene/sigma_beta^2/(1-sum(pve_gene)-pve_snp)/group_size
+snp_prior <- pve_snp/sigma_beta^2/(1-sum(pve_gene)-pve_snp)/5000000
+
+thins <- c(1)
+
+prior_true <- gene_prior
+  
+enrichment_true <- log(gene_prior/snp_prior,base = exp(1))
+
+pve_true <- pve_gene
+
+phe_true <- pve_gene/(sum(pve_gene)+pve_snp)
+```
+
+```{r echo=FALSE}
+pve_gene <- c(0.02, 0.02, 0, 0, 0,
+              0.01, 0.01, 0, 0, 0,
+              0.003, 0.003, 0, 0, 0)
+
+group_size <- c(8170,7395,8274,8561,9774,
+                13273, 14245, 15620, 19358, 24842,
+                3479, 1930, 2834, 3271, 4751)
 pve_snp <- 0.3
 sigma_theta <- 0.02
 sigma_beta <- 0.02
@@ -87,6 +116,18 @@ plot_PHE_correlated(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_al
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_uncorrelated_tissues_three_omics/"
 runtag = "five_uncorrelated_tissues_three_omics"
 plot_PHE_uncorrelated(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
+```
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/"
+runtag = "five_correlated_brain_tissues_three_omics"
+plot_PHE(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
+```
+
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_uncorrelated_tissues_three_omics/"
+runtag = "five_uncorrelated_tissues_three_omics"
+plot_PHE(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
 ```
 
 ### Figure 2d: PIP calibration
@@ -274,12 +315,17 @@ invisible(NULL)
 
 ### Figure 3d: Existing methods may overestimate the contribution of molQTL.
 ```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE}
-snp_info <- fread("/project/xinhe/shengqian/cTWAS_epigenetic/data/UKBBLD_SNPs.txt")
-gwas <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/gwas/ctwas_processed_zsnp/LDL-ukb-d-30780_irnt.preprocessed.z_snp.RDS")
-gwas <- gwas %>% left_join(dplyr::select(as.data.frame(snp_info), id, pos, chrom), by = "id")
+gwas <- readRDS("/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.3qtls.thin1.shared_all.L5.regionmerge_with_mappingtable_finemap_res.RDS")
+gwas <- anno_finemap_res(gwas,
+                       snp_map = snp_map,
+                       mapping_table = mapping_table,
+                       add_gene_annot = TRUE,
+                       map_by = "molecular_id",
+                       drop_unmapped = TRUE,
+                       add_position = TRUE,
+                       use_gene_pos = "mid")
+gwas <- gwas[gwas$type=="SNP",]
 gwas$p <- z2p(gwas$z)
-gwas$pos <- as.numeric(gwas$pos)
-gwas$p   <- as.numeric(gwas$p)
 gwas_loci <- count_loci_500kb(gwas,chr_col = "chrom",pos_col = "pos",p_col   = "p",id_col  = "id",p_thresh = 5e-8, window_bp = 5e5)$loci
 
 coloc_genes <- readRDS("/project/xinhe/shengqian/coloc_GWAS_analysis/results/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.coloc_res.RDS")
@@ -410,9 +456,9 @@ ctwas_genes <- ctwas_genes$gene_name[ctwas_genes$combined_pip > 0.8]
 folder_results <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/results_downstream/enrichr_compare/"
 coloc_genes <- readRDS(paste0(folder_results,trait,".genes.coloc.RDS"))
 coloc_genes <- coloc_genes$gene_name[coloc_genes$PP4 > 0.8]
-
+coloc_genes <- unique(coloc_genes)
 twas_genes <- readRDS(paste0(folder_results,trait,".genes.twas_bonf.RDS"))
-
+twas_genes <- unique(twas_genes)
 df <- data.frame(
   Method = c("All genes", "M-cTWAS", "Coloc", "TWAS"),
   Proportion = c(length(known)/(length(known)+length(bystander)),sum(ctwas_genes%in%known) / (sum(ctwas_genes%in%known) + sum(ctwas_genes%in%bystander)), sum(coloc_genes%in%known) / (sum(coloc_genes%in%known) + sum(coloc_genes%in%bystander)), sum(twas_genes%in%known) / (sum(twas_genes%in%known) + sum(twas_genes%in%bystander)))
@@ -609,7 +655,7 @@ grid.newpage()
 print(p2)
 ```
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=15, fig.width=20}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=25, fig.width=30}
 draw(p1 + p2,heatmap_legend_side = "right",
   annotation_legend_side = "right")
 ```
@@ -625,10 +671,21 @@ draw(p1 + p2,heatmap_legend_side = "right",
     <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/data/figures/LDL_gene_clusters.png" width="150%">
 </figure>
 
+### Figure 5d: A substantial fraction of cTWAS genes are novel
+```{r,  echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
+mapping_munro     <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
+mapping_table <- rbind(mapping_predictdb, mapping_munro)
+snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
+make_ctwas_category_barplot(trait = "LDL-ukb-d-30780_irnt",
+                            mapping_table = mapping_table,
+                            snp_map = snp_map)$p
+```
+
 ## Figure 6: Brain epiQTLs explain a large fraction of missing heritability by eQTLs
 
-### Figure 6a: Enrichment of epiQTLs vs. eQTLs
-```{r,echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
+### Figure 6a: EpiQTLs explain a larger fraction of h2g than eQTLs
+```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
 prop_heritability <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.parameters.RDS")
 
 # Extract values
@@ -651,8 +708,23 @@ ggplot(df, aes(x = context, y = value)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
-### Figure 6b: epiQTLs explain a larger fraction of h2g than eQTLs and different QTLs have limited overlap
 ```{r,echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
+prop_heritability <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.parameters.RDS")
+prop_heritability <- prop_heritability$prop_heritability
+prop_heritability <- c(sum(prop_heritability[1:5]),sum(prop_heritability[6:7]),prop_heritability[8],prop_heritability[9])
+colors <- brewer.pal(n = 4, name = "Set2")  # Alternatives: "Pastel1", "Dark2", "Set3"
+
+# Draw pie chart
+pie(
+  prop_heritability,
+  labels = paste0(c("eQTL","caQTL","mQTL","SNP"), "\n", round(100 * prop_heritability, 1), "%"),
+  col = colors,
+  border = "white"
+)
+```
+
+### Figure 6b: Using epiQTL discovered novel CREs not explained by eQTLs
+```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
 library(RColorBrewer)
 # Example: Load three different heritability proportion datasets
 prop1 <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL/SCZ_eQTL.parameters.RDS")$prop_heritability
@@ -691,19 +763,32 @@ pie(
 
 ```
 
-```{r,echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=4, fig.width=10}
-prop_heritability <- readRDS("/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.parameters.RDS")
-prop_heritability <- prop_heritability$prop_heritability
-prop_heritability <- c(sum(prop_heritability[1:5]),sum(prop_heritability[6:7]),prop_heritability[8],prop_heritability[9])
-colors <- brewer.pal(n = 4, name = "Set2")  # Alternatives: "Pastel1", "Dark2", "Set3"
+```{r echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+mapping_table <- readRDS("/project/xinhe/shengqian/cTWAS_epigenetic/data/weights/gene_mapping.RDS")
+predictdb_mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
+mapping_table <- rbind(mapping_table,predictdb_mapping_table)
+snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
+suppressMessages({
+  suppressWarnings({
+    full_cre_res <- get_cre_res(mapping_table,"/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.finemap_regions_res.RDS",snp_map)
+    full_gene_res <- get_gene_res(mapping_table, "/project2/xinhe/shengqian/cTWAS_epigenetics/results/SCZ_eQTL_caQTL_mQTL/SCZ_eQTL_caQTL_mQTL.finemap_regions_res.RDS", snp_map)
+  })
+})
 
-# Draw pie chart
-pie(
-  prop_heritability,
-  labels = paste0(c("eQTL","caQTL","mQTL","SNP"), "\n", round(100 * prop_heritability, 1), "%"),
-  col = colors,
-  border = "white"
+# Values from your results
+df <- data.frame(
+  category = c("Gene", "CRE"),
+  count = c(dim(full_gene_res$result_sig)[1], dim(full_cre_res$result_sig)[1])
 )
+
+# Create bar plot with ggplot2
+ggplot(df, aes(x = category, y = count, fill = category)) +
+  geom_bar(stat = "identity") +
+  labs(title = "",
+       x = "",
+       y = "Count (PIP>0.8)") +
+  theme_minimal() +
+  theme(legend.position = "none")
 ```
 
 ### Figure 6c: Using epiQTL discovered novel CREs missed by eQTLs
@@ -772,5 +857,107 @@ p2 <- ggplot(merged_result, aes(x = combined_pip,
 ```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=5, fig.width=10}
 combined_plot <- (p1 | p2) + plot_layout(guides = "collect") & theme(legend.position = "bottom")
 print(combined_plot)
+```
+
+```{r}
+# ---- settings ----
+workdir <- "/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs_peaks/"
+bed_files <- list.files(workdir, pattern = "^all_cre_cpgs\\.[^.]+\\.PeakCalls\\.bed$", full.names = TRUE)
+stopifnot(length(bed_files) > 0)
+
+# Extract clean cell type names
+cell_types <- sub("^all_cre_cpgs\\.(.*?)\\.PeakCalls\\.bed$", "\\1",
+                  basename(bed_files))
+
+# ---- read CpGs and build long table ----
+read_cpgs <- function(fp) {
+  dt <- fread(fp, header = FALSE, sep = "\t", showProgress = FALSE)
+  unique(dt[[ncol(dt)]])
+}
+
+cpg_list <- lapply(bed_files, read_cpgs)
+
+records <- rbindlist(
+  lapply(seq_along(cpg_list), function(i) {
+    data.table(cpg = cpg_list[[i]], cell = cell_types[i], present = 1L)
+  })
+)
+
+records <- unique(records, by = c("cpg", "cell"))
+
+# ---- cast to wide matrix ----
+mat_dt <- dcast(records, cpg ~ cell, value.var = "present", fill = 0L)
+presence_count <- rowSums(as.matrix(mat_dt[, -1, with = FALSE]))
+mat_dt <- mat_dt[order(presence_count, decreasing = TRUE)]
+
+cpg_ids <- mat_dt$cpg
+mat <- as.matrix(mat_dt[, -1, with = FALSE])
+rownames(mat) <- cpg_ids
+
+# ---- plot heatmap ----
+cols <- c("white", "#FF9999")
+brks <- c(-0.5, 0.5, 1.5)
+
+pheatmap(
+  mat,
+  color = cols,
+  breaks = brks,
+  cluster_rows = FALSE,
+  cluster_cols = FALSE,
+  show_rownames = FALSE,
+  show_colnames = TRUE,
+  legend = FALSE,
+  border_color = NA
+)
+
+# ---- proportions: CpG present in exactly k cell types (k = 1..7) ----
+k_per_cpg <- rowSums(mat)                # how many cell types have a peak for each CpG
+n_cpg     <- length(k_per_cpg)
+n_cells   <- ncol(mat)                    # should be 7
+
+stat_dt <- data.table(
+  peaks = 1:n_cells,
+  n = as.integer(table(factor(k_per_cpg, levels = 1:n_cells)))
+)
+stat_dt[, proportion := n / n_cpg]
+
+cat("\nProportion of CpGs present in exactly k cell-type peaks:\n")
+print(stat_dt)
+# ---- optional: quick bar plot to screen (not saved) ----
+ggplot(stat_dt, aes(x = factor(peaks), y = proportion)) +
+  geom_col(fill = "#FF9999") +
+  geom_text(aes(label = sprintf("%.2f", proportion)), vjust = -0.3, size = 3) +
+  labs(x = "k (number of cell types with a peak)", y = "Proportion of CpGs",
+       title = "CpGs present in exactly k cell-type peaks") +
+  ylim(0, max(stat_dt$proportion) * 1.15) +
+  theme_classic()
+```
+
+```{r}
+driver <- dbDriver('SQLite')
+db <- dbConnect(drv = driver, "/project/xinhe/shengqian/cTWAS_epigenetic/data/weights/brain_mQTL.db")
+query <- function(...) RSQLite::dbGetQuery(db, ...)
+weights <- query("select * from weights")
+RSQLite::dbDisconnect(db)
+MetaBrain_eQTL <- readRDS("/project/xinhe/shengqian/cTWAS_epigenetic/data/MetaBrain_eQTL/MetaBrain_eQTL_qvalue005.RDS")
+cre_cpgs <- fread("/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs.bed")
+weights <- weights[weights$gene %in% cre_cpgs$V4,]
+length(intersect(weights$rsid,MetaBrain_eQTL$rsid))
+```
+
+```{r}
+#library(annotatr)
+#dm_regions = read_regions(con = "/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs.bed", genome = 'hg38',format = 'bed')
+#annots = c('hg38_basicgenes', 'hg38_genes_intergenic')
+#annotations = build_annotations(genome = 'hg38', annotations = annots)
+#dm_annotated = annotate_regions(regions = dm_regions,annotations = annotations,ignore.strand = TRUE,quiet = FALSE)
+#df_dm_annotated = data.frame(dm_annotated)
+#saveRDS(df_dm_annotated,file = "/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs_annotation.RDS")
+cpg_annot <- readRDS("/project/xinhe/shengqian/cTWAS_epigenetic/data/all_cre_cpgs_annotation.RDS")
+cpg_annot$annotation <- sapply(cpg_annot$annot.id, function(x){unlist(strsplit(x, split="[:]"))[1]})
+cpg_annot <- cpg_annot[,c("name","annotation","annot.symbol")]
+cpg_annot <- cpg_annot[cpg_annot$annotation=="intergenic",]
+cpg_annot <- unique(cpg_annot[,c("name","annotation")])
+table(cpg_annot$annotation)
 ```
 
