--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -92,27 +92,26 @@ make_phe_plot_correlated()$plot
 make_phe_plot_uncorrelated()$plot
 ```
 
-### Figure 2b: Enrichment
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
+```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/"
 runtag = "five_correlated_brain_tissues_three_omics"
 plot_enrichment_correlated(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",enrichment_true)
 ```
 
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
+```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_uncorrelated_tissues_three_omics/"
 runtag = "five_uncorrelated_tissues_three_omics"
 plot_enrichment_uncorrelated(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",enrichment_true)
 ```
 
-### Figure 2c: PHE
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
+### Figure 2b: PHE
+```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/"
 runtag = "five_correlated_brain_tissues_three_omics"
 plot_PHE_correlated(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
 ```
 
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
+```{r, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 4}
 results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_uncorrelated_tissues_three_omics/"
 runtag = "five_uncorrelated_tissues_three_omics"
 plot_PHE_uncorrelated(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
@@ -130,7 +129,7 @@ runtag = "five_uncorrelated_tissues_three_omics"
 plot_PHE(results_dir,runtag,paste(1, 1:10, sep = "-"),c(1),"shared_all","ctwas",".minp08.mingene0.parameters.RDS",phe_true)
 ```
 
-### Figure 2d: PIP calibration
+### Figure 2c: PIP calibration
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=8, fig.height=4}
 df1 <- readRDS("/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/molecular_PIP_calibration_df.RDS")
 df2 <- readRDS("/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/gene_PIP_calibration_df.RDS")
@@ -147,7 +146,7 @@ fig2 <- cp_plot(df2$susie_pip, df2$ifcausal, df2$runtag, mode ="PIP", main = "Ge
 grid.arrange(fig1, fig2, ncol = 2, top = "Uncorrelated tissues")
 ```
 
-### Figure 2e: Power and False discovery rate
+### Figure 2d: Power and False discovery rate
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width=8, fig.height=4}
 multi_ctwas_res <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/multi_ctwas_simu_res.RDS"
 single_ctwas_res <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_five_correlated_brain_tissues_three_omics/single_ctwas_simu_res.RDS"
@@ -495,9 +494,8 @@ plots <- plot_number_of_signals_per_region_distributions(
   ctwas_id_file = "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.3qtls.thin1.shared_all.L5.regionmerge_with_mappingtable_finemap_res.RDS",
   ctwas_gene_alpha_file = "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.3qtls.thin1.shared_all.L5.regionmerge_with_mappingtable_susie_alpha_res.RDS",
   mapping_table = mapping_table,
-  x_max = 50
+  x_max = 10
 )
-
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
