--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -9,6 +9,7 @@ editor_options:
 ---
 # cTWAS paper figures
   * [cTWAS paper figures](ctwas_paper_figures.html)
+  * [cTWAS network analysis](ctwas_network_analysis.html)
 
 # Data
 
