--- a/analysis/ctwas_network_analysis.Rmd
+++ b/analysis/ctwas_network_analysis.Rmd
@@ -14,7 +14,8 @@ library(tidygraph)
 library(tidyverse)
 ```
 
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 12}
+### LDL
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 8, fig.height= 8}
 string <- read.table("/project/xinhe/shengqian/cTWAS_paper_figures/data/string_LDL.tsv",header = F)
 graph <- graph_from_data_frame(d = string, directed = FALSE)
 comp <- components(graph)
@@ -27,7 +28,8 @@ ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
   theme_void() + theme(legend.position = "none")
 ```
 
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 12, fig.height= 12}
+### IBD
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 8, fig.height= 8}
 string <- read.table("/project/xinhe/shengqian/cTWAS_paper_figures/data/string_IBD.tsv",header = F)
 graph <- graph_from_data_frame(d = string, directed = FALSE)
 comp <- components(graph)
