--- a/analysis/ctwas_network_analysis.Rmd
+++ b/analysis/ctwas_network_analysis.Rmd
@@ -15,7 +15,13 @@ library(tidyverse)
 ```
 
 ### LDL
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 6, fig.height= 6}
+Functions of clusters in the network
+* The biggest cluster is Cholesterol metabolism.
+* DMTN, INHBB, ACVR1C: Activin receptor signaling pathway. 
+* USP53, USP39, TRIM39: Ubiquitin carboxyl-terminal hydrolase. TRIM39 is an E3 ubiquitin ligase. 
+* GAS6 and TIMD4: phosphatidylserine binding .
+* ABCA8, ADH1B, CYP2A6: ABCA8 is ATP-dependent lipophilic drug transporter. ADH1B and CYP2A6 involve in drug metabolism.
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 5, fig.height= 5}
 string <- read.table("/project/xinhe/shengqian/cTWAS_paper_figures/data/string_LDL.tsv",header = F)
 graph <- graph_from_data_frame(d = string, directed = FALSE)
 comp <- components(graph)
@@ -29,7 +35,11 @@ ggraph(graph, layout = "fr", niter = 1000, area = vcount(graph)^2.4) +
 ```
 
 ### IBD
-```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 6, fig.height= 6}
+Functions of clusters in the network
+* The biggest cluster is Leukocyte and Lymphocyte activiation. 
+* GPR35 and RGS14: They are connected in the G protein signaling network. GPR35, when activated, signals through G proteins. RGS14 can regulate the duration and strength of such GPCR signals by accelerating GPT hydrolysis in Ga subunits
+* ADAM15 and IP6K2: cell adhesion, migration and apoptosis. 
+```{r,echo=FALSE, message=FALSE, warning=FALSE, fig.width= 5, fig.height= 5}
 string <- read.table("/project/xinhe/shengqian/cTWAS_paper_figures/data/string_IBD.tsv",header = F)
 graph <- graph_from_data_frame(d = string, directed = FALSE)
 comp <- components(graph)
